Added JWT Security as Default Authentication

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -2,11 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Debug"
     }
   },
   "ConnectionStrings": {
-    "sqlConnection":  "server=(localdb)\\mssqllocaldb; database=Hotellisting_db; integrated security=true" 
+    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Hotellisting_db; integrated security=true"
+  },
+  "Jwt" : {
+    "Issuer": "HotelListingAPI",
+    "TokenLife" :  15
   },
   "AllowedHosts": "*"
 }
